# AL-dz3

./: .gitignore  CMakeLists.txt  configure  dz3  main.cpp
app/: main.cpp
graphs/: CMakeLists.txt  graphs.hpp
include/: Read.hpp  WriteAndRead.hpp  graphs.hpp
libs/Read/: read.cpp  read.hpp
libs/WriteAndRead/: CMakeLists.txt  read.cpp  read.hpp  write.cpp  write.hpp
libs/graphs/: CMakeLists.txt
libs/graphs/graph/: graph.cpp  graph.hpp
libs/graphs/orgraph/: orgraph.hpp
src/: main.cpp
tests/: test.cpp
